[package]
name = "drama-meter"
version = "0.0.1"
description = "Hamburger generator"
authors = ["averageeucplayer"]
license = "GNU General Public License v3.0"
repository = "https://github.com/averageeucplayer/drama-meter"
edition = "2024"
rust-version = "1.88.0"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
strum = "0.27"
strum_macros = "0.27"
once_cell = "1.21.3"
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-updater = "2.9.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
bitflags = "2.4.1"
window-vibrancy = "0.6.0"
hashbrown = { version = "0.15.0", features = ["serde"] }
tokio = { version = "1.45.1", features = ["rt", "macros"] }
serde_with = "3.12.0"
log = "0.4.18"
flexi_logger = { version = "0.30.2", default-features = false }
reqwest = { version = "0.12", features = ["json", "gzip"] }
uuid = { version = "1.17.0", features = ["v4"] }
moka = { version = "0.12.7", features = ["sync"] }
rsntp = { version = "4.0.0", default-features = false, features = ["chrono"]  }
flate2 = "1.0.30"
sysinfo = "0.35.1"
meter-core = { path="../meter-core-rs-stub", optional = true }
tauri-plugin-shell = "2"
thiserror = "2.0.12"
strfmt = "0.2.4"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
rand = "0.9.0"
bincode = "2.0.1"

[features]
default = ["fake", "meter-core"]
fake = []
meter-core = ["dep:meter-core"]

[profile.release]
# panic = "abort" # Strip expensive panic clean-up logic
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# strip = true # Remove debug symbols
debug = true


[profile.dev.package."*"]
debug = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
